Fix spacing on full size work cards

--- a/src/_assets/sass/layers/components/_work-card.scss
+++ b/src/_assets/sass/layers/components/_work-card.scss
@@ -81,10 +81,11 @@
     }
 
       .c-work-card__title {
-        margin: tools.sp(small) 0;
+        margin: tools.sp(xmicro) 0;
       }
 
       .c-work-card--sm .c-work-card__title {
+        margin: tools.sp(small) 0;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
